Minor layout fixes

--- a/site/themes/gikme-light/index.html
+++ b/site/themes/gikme-light/index.html
@@ -8,7 +8,7 @@
 	<body class="page">
 		
 		<header class="header">
-			<h1 class="header__logo">Gik me</h1>
+			<h1 class="header__logo"><a href="#" class="header__logo-link">Gik me</a></h1>
 			<nav class="header__menu">
 				<a href="#" class="header__menu-item header__menu-item_active">Подкаст</a>
 				<a href="#" class="header__menu-item">Невошедшее</a>
