Added basic responsive

--- a/site/themes/gikme-light/index.html
+++ b/site/themes/gikme-light/index.html
@@ -215,6 +215,7 @@
 		
 		<div class="pager">
 			<span class="pager__amount">Страница 1 из 11</span>
+			<a href="#" class="pager__link link">&larr; Назад</a>
 			<a href="#" class="pager__link link">Дальше &rarr;</a>
 		</div>
 
