--- a/site/themes/gikme-light/index.html
+++ b/site/themes/gikme-light/index.html
@@ -2,6 +2,7 @@
 <html class="window">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="static/css/main.css">
 		<title>Gik.me</title>
 	</head>
