--- a/pages/donate.html
+++ b/pages/donate.html
@@ -55,7 +55,8 @@
 <h4>Яндекс.Деньги</h4>
 <iframe allowtransparency="true" frameborder="0" height="201" scrolling="no" src="https://money.yandex.ru/embed/donate.xml?account=410011889725372&amp;quickpay=donate&amp;payment-type-choice=on&amp;default-sum=100&amp;targets=%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5+%D0%BE%D1%81%D0%BD%D0%B0%D1%89%D0%B5%D0%BD%D0%B8%D0%B5+%D0%BF%D0%BE%D0%B4%D0%BA%D0%B0%D1%81%D1%82%D0%B0&amp;target-visibility=on&amp;project-name=Gik.me+podcast&amp;project-site=http%3A%2F%2Fgik.me&amp;button-text=05&amp;comment=on&amp;hint=%D0%9E%D1%81%D1%82%D0%B0%D0%B2%D1%8C%D1%82%D0%B5+%D0%B8%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D1%8E+%D0%BE+%D1%81%D0%B5%D0%B1%D0%B5+%D0%B4%D0%BB%D1%8F+%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%89%D0%B5%D0%BD%D0%B8%D1%8F+%D0%B2+%22%D0%B7%D0%B0%D0%BB%D0%B5+%D1%81%D0%BB%D0%B0%D0%B2%D1%8B%22." width="508"></iframe>
 
-<h4>PayPal</h4>
+<h4><a href="https://paypal.me/gikme">PayPal.me</a></h4>
+<p>или</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="8W2MSD39XUUBG">
