Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -53,7 +53,7 @@
                 	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение студии. Не забудьте оставить ифномацию о себе в комментарии, чтобы мы могли укзать её в списке наших&nbsp;спонсоров!</p>
 <p>Огромное спасибо за&nbsp;поддержку!</p>
 <h4><a href="http://yasobe.ru/na/gikme">Яндекс.Деньги</a></h4>
-<h4><a href="https://paypal.me/gikme">PayPal.me</a></h4>
+<h4><a href="https://paypal.me/gikme/300">PayPal.me</a></h4>
                 </section>
                 <footer class="article__footer">
                     <div class="article__meta">
