Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -50,10 +50,25 @@
             		<h1 class="article__title">Донат</h1>
             	</header>
                 <section class="article__content">
-                	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение студии. Не забудьте оставить ифномацию о себе в комментарии, чтобы мы могли укзать её в списке наших&nbsp;спонсоров!</p>
+                	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение студии. Не забудьте оставить ифнормацию о себе в комментарии (чтобы мы могли укзать Вас в списке наших спонсоров), а также получателя Вашего пжертвования (например: «Саше на черный квадрат», «Вадиму на микрофон», «Тёме на&nbsp;плейстейшн»)!</p>
 <p>Огромное спасибо за&nbsp;поддержку!</p>
 <h4><a href="http://yasobe.ru/na/gikme">Яндекс.Деньги</a></h4>
 <h4><a href="https://paypal.me/gikme/300">PayPal</a></h4>
+<h2>Наши спонсоры (в алфавитном&nbsp;порядке)</h2>
+<p>anonymous&nbsp;x5</p>
+<p>41001<strong><em>0199<br />
+41001</em></strong>1828<br />
+41001<strong><em>8384 х3<br />
+410011</em></strong>5160  </p>
+<p>Cyber (@cyber)<br />
+Khojanashvili Givi<br />
+Kolganov Evgeny<br />
+Konstantin Taletskiy<br />
+Rad (@greynix) х3<br />
+Robert Null&nbsp;(@bobrebyc)  </p>
+<p>Григорьев Дмитрий х2<br />
+Пухов Денис<br />
+Савин&nbsp;Михаил  </p>
                 </section>
                 <footer class="article__footer">
                     <div class="article__meta">
