Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -56,10 +56,9 @@
 <h4><a href="https://paypal.me/gikme/300">PayPal</a></h4>
 <h2>Наши спонсоры (в алфавитном&nbsp;порядке)</h2>
 <p>anonymous&nbsp;x5</p>
-<p>41001<strong><em>0199<br />
-41001</em></strong>1828<br />
-41001<strong><em>8384 х3<br />
-410011</em></strong>5160  </p>
+<p>41001~0199<br />
+41001~1828<br />
+41001~8384 х3<br />&nbsp;410011~5160  </p>
 <p>Cyber (@cyber)<br />
 Khojanashvili Givi<br />
 Kolganov Evgeny<br />
