--- a/tags.html
+++ b/tags.html
@@ -41,7 +41,7 @@
             <main class="content">
                 <section class="article">
                     <header class="article__header">
-                        <h1 class="article__title">Архив</h1>
+                        <h1 class="article__title">Теги</h1>
                     </header>
                     <div class="article__content">
                         <div class="post archives">
