Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -50,10 +50,18 @@
             		<h1 class="article__title">Донат</h1>
             	</header>
                 <section class="article__content">
-                	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение студии. Не забудьте оставить ифнормацию о себе в комментарии (чтобы мы могли укзать Вас в списке наших спонсоров), а также получателя Вашего пжертвования (например: «Саше на черный квадрат», «Вадиму на микрофон», «Тёме на&nbsp;плейстейшн»)!</p>
+                	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение&nbsp;студии.</p>
 <p>Огромное спасибо за&nbsp;поддержку!</p>
-<h4><a href="http://yasobe.ru/na/gikme">Яндекс.Деньги</a></h4>
+<h4>Яндекс.Деньги</h4>
+<ul>
+<li><a href="http://yasobe.ru/na/gikme">Общий</a></li>
+<li><a href="https://money.yandex.ru/to/410011889725372/300">Ваде</a></li>
+<li><a href="https://money.yandex.ru/to/41001503155190/300">Саше</a></li>
+<li><a href="https://money.yandex.ru/to/41001272101724/300">Тёме</a></li>
+</ul>
+<p>В персональных платежах также можно указать комментарий — оставьте ифнормацию о себе чтобы мы могли укзать Вас в списке наших&nbsp;спонсоров.</p>
 <h4><a href="https://paypal.me/gikme/300">PayPal</a></h4>
+<p>Не забудьте оставить ифнормацию о себе в комментарии (чтобы мы могли укзать Вас в списке наших спонсоров), а также получателя Вашего пжертвования (например: «Саше на черный квадрат», «Вадиму на микрофон», «Тёме на&nbsp;плейстейшн»)!</p>
 <h2>Наши спонсоры (в алфавитном&nbsp;порядке)</h2>
 <p>anonymous&nbsp;x5</p>
 <p>41001~0199<br />
