Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -52,6 +52,36 @@
                 <section class="article__content">
                 	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение&nbsp;студии.</p>
 <p>Огромное спасибо за&nbsp;поддержку!</p>
+<h4>Подписка</h4>
+<form class="payment-form payment-form_display_inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="K3UP3J9NZ9KGU">
+<button class="header__menu-item header__menu-item_donate header__menu-item_active header__menu-item_single" type="submit" name="submit">Неплохо на 100₽/мес</button>
+<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1" style="position:fixed;top:-1000px;left:-1000px">
+</form>
+
+<form class="payment-form payment-form_display_inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="3KWSPBTZVY2FS">
+<button class="header__menu-item header__menu-item_donate header__menu-item_active header__menu-item_single" type="submit" name="submit">Шутки за 300₽/мес</button>
+<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1" style="position:fixed;top:-1000px;left:-1000px">
+</form>
+
+<form class="payment-form payment-form_display_inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="BLYDCHS7HCZJQ">
+<button class="header__menu-item header__menu-item_donate header__menu-item_active header__menu-item_single" type="submit" name="submit">Хочу чаще! 100₽/нед</button>
+<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1" style="position:fixed;top:-1000px;left:-1000px">
+</form>
+
+<form class="payment-form payment-form_display_inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="TA7HWZZERMZ34">
+<button class="header__menu-item header__menu-item_donate header__menu-item_active header__menu-item_single" type="submit" name="submit">Ванлав 500₽/мес</button>
+<img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1" style="position:fixed;top:-1000px;left:-1000px">
+</form>
+
+<p><a class="header__menu-item header__menu-item_active header__menu-item_single" href="https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=A67XUNFNPRSS8">gik.me уже не торт —&nbsp;отписываюсь!</a></p>
 <h4>Яндекс.Деньги</h4>
 <ul>
 <li><a href="http://yasobe.ru/na/gikme">Общий</a></li>
