Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -52,7 +52,7 @@
                 <section class="article__content">
                 	<p>Вы можете поддержать подкаст, пожертвовав любую, комфортную для Вас сумму, на техническое оснащение&nbsp;студии.</p>
 <p>Огромное спасибо за&nbsp;поддержку!</p>
-<h4>Подписка</h4>
+<h4>Регулярное&nbsp;пожертвование</h4>
 <form class="payment-form payment-form_display_inline" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="K3UP3J9NZ9KGU">
@@ -89,10 +89,10 @@
 <li><a href="https://money.yandex.ru/to/41001503155190/300">Саше</a></li>
 <li><a href="https://money.yandex.ru/to/41001272101724/300">Тёме</a></li>
 </ul>
-<p>В персональных платежах также можно указать комментарий — оставьте ифнормацию о себе чтобы мы могли укзать Вас в списке наших&nbsp;спонсоров.</p>
+<p>В персональных платежах также можно указать комментарий — оставьте ифнормацию о себе чтобы мы могли указать Вас в списке наших&nbsp;меценатов.</p>
 <h4><a href="https://paypal.me/gikme/300">PayPal</a></h4>
-<p>Не забудьте оставить ифнормацию о себе в комментарии (чтобы мы могли укзать Вас в списке наших спонсоров), а также получателя Вашего пжертвования (например: «Саше на черный квадрат», «Вадиму на микрофон», «Тёме на&nbsp;плейстейшн»)!</p>
-<h2>Наши спонсоры (в алфавитном&nbsp;порядке)</h2>
+<p>Не забудьте оставить ифнормацию о себе в комментарии (чтобы мы могли укзать Вас в списке наших меценатов), а также получателя Вашего пожертвования (например: «Саше на черный квадрат», «Вадиму на микрофон», «Тёме на&nbsp;плейстейшн»)!</p>
+<h2>Наши меценаты (в алфавитном&nbsp;порядке)</h2>
 <p>anonymous&nbsp;x5</p>
 <p>41001~0199<br />
 41001~1828<br />
@@ -106,6 +106,9 @@ Robert Null (@bobrebyc)&nbsp;х2  </p>
 <p>Григорьев Дмитрий х2<br />
 Пухов Денис<br />
 Савин&nbsp;Михаил  </p>
+<h3>Автоплатёж:</h3>
+<p>Пухов Денис
+Cyber&nbsp;(@cyber)</p>
                 </section>
                 <footer class="article__footer">
                     <div class="article__meta">
