Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -51,7 +51,7 @@
                                     <li><a href="http://gik.me/tag/2ds.html" class="link">2ds</a> (1)</li>
                                     <li><a href="http://gik.me/tag/300ppi.html" class="link">300ppi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/37-signals.html" class="link">37 signals</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/3d.html" class="link">3d</a> (11)</li>
+                                    <li><a href="http://gik.me/tag/3d.html" class="link">3d</a> (12)</li>
                                     <li><a href="http://gik.me/tag/3d-fingerprint.html" class="link">3d fingerprint</a> (1)</li>
                                     <li><a href="http://gik.me/tag/3d-print.html" class="link">3d print</a> (4)</li>
                                     <li><a href="http://gik.me/tag/3dnews.html" class="link">3dnews</a> (1)</li>
@@ -97,6 +97,7 @@
                                     <li><a href="http://gik.me/tag/apple-pay.html" class="link">apple pay</a> (1)</li>
                                     <li><a href="http://gik.me/tag/appnet.html" class="link">app.net</a> (3)</li>
                                     <li><a href="http://gik.me/tag/appstore.html" class="link">appstore</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/ar.html" class="link">ar</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ara.html" class="link">ara</a> (5)</li>
                                     <li><a href="http://gik.me/tag/arm.html" class="link">arm</a> (3)</li>
                                     <li><a href="http://gik.me/tag/army.html" class="link">army</a> (1)</li>
@@ -144,6 +145,7 @@
                                     <li><a href="http://gik.me/tag/big-dog.html" class="link">big dog</a> (1)</li>
                                     <li><a href="http://gik.me/tag/bill-gates.html" class="link">bill gates</a> (2)</li>
                                     <li><a href="http://gik.me/tag/bing.html" class="link">bing</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/bio.html" class="link">bio</a> (1)</li>
                                     <li><a href="http://gik.me/tag/biocentrism.html" class="link">biocentrism</a> (1)</li>
                                     <li><a href="http://gik.me/tag/bionic.html" class="link">bionic</a> (1)</li>
                                     <li><a href="http://gik.me/tag/birdman.html" class="link">birdman</a> (1)</li>
@@ -654,6 +656,7 @@
                                     <li><a href="http://gik.me/tag/navalny.html" class="link">navalny</a> (2)</li>
                                     <li><a href="http://gik.me/tag/navalnyi.html" class="link">навальный</a> (1)</li>
                                     <li><a href="http://gik.me/tag/nelson-mandela.html" class="link">nelson mandela</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/nervana.html" class="link">nervana</a> (1)</li>
                                     <li><a href="http://gik.me/tag/net.html" class="link">.net</a> (2)</li>
                                     <li><a href="http://gik.me/tag/netflix.html" class="link">netflix</a> (6)</li>
                                     <li><a href="http://gik.me/tag/neurobiology.html" class="link">neurobiology</a> (1)</li>
@@ -679,7 +682,7 @@
                                     <li><a href="http://gik.me/tag/nz.html" class="link">nz</a> (1)</li>
                                     <li><a href="http://gik.me/tag/oculus.html" class="link">oculus</a> (1)</li>
                                     <li><a href="http://gik.me/tag/oculus-rift.html" class="link">oculus rift</a> (5)</li>
-                                    <li><a href="http://gik.me/tag/odno-nazvanie.html" class="link">odno nazvanie</a> (28)</li>
+                                    <li><a href="http://gik.me/tag/odno-nazvanie.html" class="link">odno nazvanie</a> (29)</li>
                                     <li><a href="http://gik.me/tag/office.html" class="link">office</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ohm.html" class="link">ohm</a> (1)</li>
                                     <li><a href="http://gik.me/tag/old48.html" class="link">old48</a> (1)</li>
@@ -787,7 +790,7 @@
                                     <li><a href="http://gik.me/tag/react.html" class="link">react</a> (1)</li>
                                     <li><a href="http://gik.me/tag/reader.html" class="link">reader</a> (1)</li>
                                     <li><a href="http://gik.me/tag/recon-jet.html" class="link">recon jet</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/red-hat.html" class="link">red hat</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/red-hat.html" class="link">red hat</a> (2)</li>
                                     <li><a href="http://gik.me/tag/regina.html" class="link">regina</a> (1)</li>
                                     <li><a href="http://gik.me/tag/remix.html" class="link">remix</a> (2)</li>
                                     <li><a href="http://gik.me/tag/restful.html" class="link">restful</a> (1)</li>
@@ -887,7 +890,7 @@
                                     <li><a href="http://gik.me/tag/spark.html" class="link">spark</a> (1)</li>
                                     <li><a href="http://gik.me/tag/spase-x.html" class="link">spase x</a> (1)</li>
                                     <li><a href="http://gik.me/tag/speed.html" class="link">speed</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/sperm.html" class="link">sperm</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/sperm.html" class="link">sperm</a> (2)</li>
                                     <li><a href="http://gik.me/tag/spirit.html" class="link">spirit</a> (1)</li>
                                     <li><a href="http://gik.me/tag/sportsru.html" class="link">sports.ru</a> (1)</li>
                                     <li><a href="http://gik.me/tag/spotify.html" class="link">spotify</a> (6)</li>
