Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -86,6 +86,7 @@
 <ul>
 <li><a href="http://yasobe.ru/na/gikme">Общий</a></li>
 <li><a href="https://money.yandex.ru/to/410011889725372/300">Ваде</a></li>
+<li><a href="https://money.yandex.ru/to/410014009528813/300">Даше</a></li>
 <li><a href="https://money.yandex.ru/to/41001503155190/300">Саше</a></li>
 <li><a href="https://money.yandex.ru/to/41001272101724/300">Тёме</a></li>
 </ul>
