Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -135,7 +135,7 @@
                                     <li><a href="http://gik.me/tag/batman.html" class="link">batman</a> (1)</li>
                                     <li><a href="http://gik.me/tag/battelle.html" class="link">battelle</a> (1)</li>
                                     <li><a href="http://gik.me/tag/batteriser.html" class="link">batteriser</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/battery.html" class="link">battery</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/battery.html" class="link">battery</a> (3)</li>
                                     <li><a href="http://gik.me/tag/battlenet.html" class="link">battle.net</a> (1)</li>
                                     <li><a href="http://gik.me/tag/beats.html" class="link">beats</a> (2)</li>
                                     <li><a href="http://gik.me/tag/beeline.html" class="link">beeline</a> (1)</li>
@@ -322,7 +322,7 @@
                                     <li><a href="http://gik.me/tag/express.html" class="link">express</a> (1)</li>
                                     <li><a href="http://gik.me/tag/f2p.html" class="link">f2p</a> (1)</li>
                                     <li><a href="http://gik.me/tag/face.html" class="link">face</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/facebook.html" class="link">facebook</a> (38)</li>
+                                    <li><a href="http://gik.me/tag/facebook.html" class="link">facebook</a> (39)</li>
                                     <li><a href="http://gik.me/tag/faenza.html" class="link">faenza</a> (1)</li>
                                     <li><a href="http://gik.me/tag/falcon-pro.html" class="link">falcon pro</a> (1)</li>
                                     <li><a href="http://gik.me/tag/falcon9.html" class="link">falcon9</a> (1)</li>
@@ -388,7 +388,7 @@
                                     <li><a href="http://gik.me/tag/golang.html" class="link">golang</a> (1)</li>
                                     <li><a href="http://gik.me/tag/goldman-sachs.html" class="link">goldman sachs</a> (1)</li>
                                     <li><a href="http://gik.me/tag/golography.html" class="link">golography</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/google.html" class="link">google</a> (90)</li>
+                                    <li><a href="http://gik.me/tag/google.html" class="link">google</a> (91)</li>
                                     <li><a href="http://gik.me/tag/google-glass.html" class="link">google glass</a> (1)</li>
                                     <li><a href="http://gik.me/tag/google-music.html" class="link">google music</a> (1)</li>
                                     <li><a href="http://gik.me/tag/google-now.html" class="link">google now</a> (1)</li>
@@ -423,6 +423,7 @@
                                     <li><a href="http://gik.me/tag/hangout.html" class="link">hangout</a> (5)</li>
                                     <li><a href="http://gik.me/tag/hankook.html" class="link">hankook</a> (1)</li>
                                     <li><a href="http://gik.me/tag/harley-davidson.html" class="link">harley-davidson</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/harold.html" class="link">harold</a> (1)</li>
                                     <li><a href="http://gik.me/tag/hawking.html" class="link">hawking</a> (1)</li>
                                     <li><a href="http://gik.me/tag/hbo.html" class="link">hbo</a> (1)</li>
                                     <li><a href="http://gik.me/tag/healbe.html" class="link">healbe</a> (1)</li>
@@ -473,7 +474,7 @@
                                     <li><a href="http://gik.me/tag/inel.html" class="link">inel</a> (1)</li>
                                     <li><a href="http://gik.me/tag/injustice.html" class="link">injustice</a> (1)</li>
                                     <li><a href="http://gik.me/tag/innovations.html" class="link">innovations</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/instagram.html" class="link">instagram</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/instagram.html" class="link">instagram</a> (5)</li>
                                     <li><a href="http://gik.me/tag/intel.html" class="link">intel</a> (13)</li>
                                     <li><a href="http://gik.me/tag/interet.html" class="link">interet</a> (1)</li>
                                     <li><a href="http://gik.me/tag/internet.html" class="link">internet</a> (4)</li>
@@ -896,7 +897,7 @@
                                     <li><a href="http://gik.me/tag/spotify.html" class="link">spotify</a> (6)</li>
                                     <li><a href="http://gik.me/tag/springpad.html" class="link">springpad</a> (1)</li>
                                     <li><a href="http://gik.me/tag/sputnik.html" class="link">sputnik</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/ssd.html" class="link">ssd</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/ssd.html" class="link">ssd</a> (3)</li>
                                     <li><a href="http://gik.me/tag/ssl.html" class="link">ssl</a> (1)</li>
                                     <li><a href="http://gik.me/tag/stain.html" class="link">stain</a> (1)</li>
                                     <li><a href="http://gik.me/tag/stamp.html" class="link">stamp</a> (1)</li>
@@ -959,7 +960,7 @@
                                     <li><a href="http://gik.me/tag/tizen.html" class="link">tizen</a> (4)</li>
                                     <li><a href="http://gik.me/tag/tjournal.html" class="link">tjournal</a> (2)</li>
                                     <li><a href="http://gik.me/tag/tom-cruise.html" class="link">tom cruise</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/tomsk.html" class="link">tomsk</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/tomsk.html" class="link">tomsk</a> (5)</li>
                                     <li><a href="http://gik.me/tag/top-gear.html" class="link">top gear</a> (4)</li>
                                     <li><a href="http://gik.me/tag/tor.html" class="link">tor</a> (1)</li>
                                     <li><a href="http://gik.me/tag/torrent.html" class="link">torrent</a> (2)</li>
@@ -1022,7 +1023,7 @@
                                     <li><a href="http://gik.me/tag/vital.html" class="link">vital</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vivaldi.html" class="link">vivaldi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vive.html" class="link">vive</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/vk.html" class="link">vk</a> (9)</li>
+                                    <li><a href="http://gik.me/tag/vk.html" class="link">vk</a> (10)</li>
                                     <li><a href="http://gik.me/tag/vkontakte.html" class="link">vkontakte</a> (25)</li>
                                     <li><a href="http://gik.me/tag/vkratsiia.html" class="link">вк.рация</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vodka.html" class="link">vodka</a> (1)</li>
@@ -1084,7 +1085,7 @@
                                     <li><a href="http://gik.me/tag/yahoo.html" class="link">yahoo</a> (3)</li>
                                     <li><a href="http://gik.me/tag/yaliny.html" class="link">yaliny</a> (1)</li>
                                     <li><a href="http://gik.me/tag/yamaha.html" class="link">yamaha</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/yandex.html" class="link">yandex</a> (35)</li>
+                                    <li><a href="http://gik.me/tag/yandex.html" class="link">yandex</a> (36)</li>
                                     <li><a href="http://gik.me/tag/yandexbrowser.html" class="link">yandex.browser</a> (1)</li>
                                     <li><a href="http://gik.me/tag/yandexkit.html" class="link">yandex.kit</a> (2)</li>
                                     <li><a href="http://gik.me/tag/yandexmarket.html" class="link">yandex.market</a> (2)</li>
