Generate Pelican site

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -108,7 +108,7 @@ Robert Null (@bobrebyc)&nbsp;х2  </p>
 Пухов Денис<br />
 Савин&nbsp;Михаил  </p>
 <h3>Автоплатёж:</h3>
-<p>Пухов Денис
+<p>Денис (@denis_0k)
 Cyber&nbsp;(@cyber)</p>
                 </section>
                 <footer class="article__footer">
