Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -322,7 +322,7 @@
                                     <li><a href="http://gik.me/tag/express.html" class="link">express</a> (1)</li>
                                     <li><a href="http://gik.me/tag/f2p.html" class="link">f2p</a> (1)</li>
                                     <li><a href="http://gik.me/tag/face.html" class="link">face</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/facebook.html" class="link">facebook</a> (39)</li>
+                                    <li><a href="http://gik.me/tag/facebook.html" class="link">facebook</a> (40)</li>
                                     <li><a href="http://gik.me/tag/faenza.html" class="link">faenza</a> (1)</li>
                                     <li><a href="http://gik.me/tag/falcon-pro.html" class="link">falcon pro</a> (1)</li>
                                     <li><a href="http://gik.me/tag/falcon9.html" class="link">falcon9</a> (1)</li>
@@ -586,6 +586,7 @@
                                     <li><a href="http://gik.me/tag/marco-polo.html" class="link">marco polo</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mars.html" class="link">mars</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mars-one.html" class="link">mars one</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/marsdinosaur.html" class="link">marsdinosaur</a> (1)</li>
                                     <li><a href="http://gik.me/tag/marusia.html" class="link">маруся</a> (1)</li>
                                     <li><a href="http://gik.me/tag/masiania.html" class="link">масяня</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mastercard.html" class="link">mastercard</a> (2)</li>
@@ -640,6 +641,7 @@
                                     <li><a href="http://gik.me/tag/motobot.html" class="link">motobot</a> (1)</li>
                                     <li><a href="http://gik.me/tag/motorola.html" class="link">motorola</a> (11)</li>
                                     <li><a href="http://gik.me/tag/mozilla.html" class="link">mozilla</a> (9)</li>
+                                    <li><a href="http://gik.me/tag/msqrd.html" class="link">msqrd</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mts.html" class="link">мтс</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mtt.html" class="link">mtt</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mtv.html" class="link">mtv</a> (1)</li>
@@ -715,6 +717,7 @@
                                     <li><a href="http://gik.me/tag/ozo.html" class="link">ozo</a> (1)</li>
                                     <li><a href="http://gik.me/tag/ozon.html" class="link">ozon</a> (1)</li>
                                     <li><a href="http://gik.me/tag/p2p.html" class="link">p2p</a> (1)</li>
+                                    <li><a href="http://gik.me/tag/paint.html" class="link">paint</a> (1)</li>
                                     <li><a href="http://gik.me/tag/panasonic.html" class="link">panasonic</a> (1)</li>
                                     <li><a href="http://gik.me/tag/paper.html" class="link">paper</a> (1)</li>
                                     <li><a href="http://gik.me/tag/parse.html" class="link">parse</a> (2)</li>
@@ -1075,7 +1078,7 @@
                                     <li><a href="http://gik.me/tag/xbox.html" class="link">xbox</a> (9)</li>
                                     <li><a href="http://gik.me/tag/xbox-one.html" class="link">xbox one</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xi3.html" class="link">xi3</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/xiaomi.html" class="link">xiaomi</a> (12)</li>
+                                    <li><a href="http://gik.me/tag/xiaomi.html" class="link">xiaomi</a> (13)</li>
                                     <li><a href="http://gik.me/tag/xmpp.html" class="link">xmpp</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xorg.html" class="link">x.org</a> (1)</li>
                                     <li><a href="http://gik.me/tag/xperia.html" class="link">xperia</a> (2)</li>
