Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -77,7 +77,7 @@
                                     <li><a href="http://gik.me/tag/alibaba.html" class="link">alibaba</a> (4)</li>
                                     <li><a href="http://gik.me/tag/alien.html" class="link">alien</a> (1)</li>
                                     <li><a href="http://gik.me/tag/alienware.html" class="link">alienware</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/aliexpress.html" class="link">aliexpress</a> (4)</li>
+                                    <li><a href="http://gik.me/tag/aliexpress.html" class="link">aliexpress</a> (5)</li>
                                     <li><a href="http://gik.me/tag/allwinner.html" class="link">allwinner</a> (1)</li>
                                     <li><a href="http://gik.me/tag/alphabet.html" class="link">alphabet</a> (2)</li>
                                     <li><a href="http://gik.me/tag/als.html" class="link">als</a> (1)</li>
@@ -612,7 +612,7 @@
                                     <li><a href="http://gik.me/tag/metric.html" class="link">metric</a> (1)</li>
                                     <li><a href="http://gik.me/tag/mhl.html" class="link">mhl</a> (1)</li>
                                     <li><a href="http://gik.me/tag/micron.html" class="link">micron</a> (2)</li>
-                                    <li><a href="http://gik.me/tag/microsoft.html" class="link">microsoft</a> (58)</li>
+                                    <li><a href="http://gik.me/tag/microsoft.html" class="link">microsoft</a> (59)</li>
                                     <li><a href="http://gik.me/tag/might-magic.html" class="link">might-magic</a> (1)</li>
                                     <li><a href="http://gik.me/tag/migration.html" class="link">migration</a> (1)</li>
                                     <li><a href="http://gik.me/tag/military.html" class="link">military</a> (1)</li>
@@ -758,7 +758,7 @@
                                     <li><a href="http://gik.me/tag/police.html" class="link">police</a> (1)</li>
                                     <li><a href="http://gik.me/tag/politics.html" class="link">politics</a> (1)</li>
                                     <li><a href="http://gik.me/tag/pony-express.html" class="link">pony express</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/pornhub.html" class="link">pornhub</a> (6)</li>
+                                    <li><a href="http://gik.me/tag/pornhub.html" class="link">pornhub</a> (7)</li>
                                     <li><a href="http://gik.me/tag/poser.html" class="link">poser</a> (1)</li>
                                     <li><a href="http://gik.me/tag/postgresql.html" class="link">postgresql</a> (1)</li>
                                     <li><a href="http://gik.me/tag/power-sleep.html" class="link">power sleep</a> (1)</li>
@@ -881,7 +881,7 @@
                                     <li><a href="http://gik.me/tag/smi.html" class="link">сми</a> (1)</li>
                                     <li><a href="http://gik.me/tag/smm.html" class="link">smm</a> (3)</li>
                                     <li><a href="http://gik.me/tag/snappy.html" class="link">snappy</a> (1)</li>
-                                    <li><a href="http://gik.me/tag/snapster.html" class="link">snapster</a> (2)</li>
+                                    <li><a href="http://gik.me/tag/snapster.html" class="link">snapster</a> (3)</li>
                                     <li><a href="http://gik.me/tag/sochi2014.html" class="link">sochi2014</a> (1)</li>
                                     <li><a href="http://gik.me/tag/softline.html" class="link">softline</a> (1)</li>
                                     <li><a href="http://gik.me/tag/solar-page.html" class="link">solar page</a> (1)</li>
@@ -966,6 +966,7 @@
                                     <li><a href="http://gik.me/tag/tjournal.html" class="link">tjournal</a> (2)</li>
                                     <li><a href="http://gik.me/tag/tom-cruise.html" class="link">tom cruise</a> (1)</li>
                                     <li><a href="http://gik.me/tag/tomsk.html" class="link">tomsk</a> (5)</li>
+                                    <li><a href="http://gik.me/tag/toonz.html" class="link">toonz</a> (1)</li>
                                     <li><a href="http://gik.me/tag/top-gear.html" class="link">top gear</a> (4)</li>
                                     <li><a href="http://gik.me/tag/tor.html" class="link">tor</a> (1)</li>
                                     <li><a href="http://gik.me/tag/torrent.html" class="link">torrent</a> (2)</li>
@@ -1029,7 +1030,7 @@
                                     <li><a href="http://gik.me/tag/vivaldi.html" class="link">vivaldi</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vive.html" class="link">vive</a> (2)</li>
                                     <li><a href="http://gik.me/tag/vk.html" class="link">vk</a> (10)</li>
-                                    <li><a href="http://gik.me/tag/vkontakte.html" class="link">vkontakte</a> (25)</li>
+                                    <li><a href="http://gik.me/tag/vkontakte.html" class="link">vkontakte</a> (26)</li>
                                     <li><a href="http://gik.me/tag/vkratsiia.html" class="link">вк.рация</a> (1)</li>
                                     <li><a href="http://gik.me/tag/vodka.html" class="link">vodka</a> (1)</li>
                                     <li><a href="http://gik.me/tag/voice.html" class="link">voice</a> (1)</li>
